[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/components/EnergyDrop.png" type="Texture" id=1]
[ext_resource path="res://scenes/components/EnergyDrop.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/FlightComponent.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 43.0

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="EnergyDrop" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="FlightComponent" parent="." instance=ExtResource( 3 )]
fly = false
max_flight_speed = 5.0
acceleration = 3.0
initial_speed = 1.0

[node name="TargetFindArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetFindArea2D"]
shape = SubResource( 2 )

[node name="EnergyArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnergyArea2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
texture = ExtResource( 1 )
